--- a/r/textpred/DESCRIPTION
+++ b/r/textpred/DESCRIPTION
@@ -7,5 +7,8 @@ Author: Josh Morel
 Maintainer: Josh Morel <morel.josh@hotmail.com>
 Description: Train and use next-word text prediction models
 Depends: R (>= 3.1.0)
-Imports: stringi
+Imports:
+    stringi,
+    hash
 License: GPL (>= 2)
+Suggests: testthat
