--- a/r/textpred/DESCRIPTION
+++ b/r/textpred/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: textpred
 Type: Package
 Title: Text Prediction
-Version: 0.1
+Version: 0.2
 Date: 2016-09-10
 Author: Josh Morel
 Maintainer: Josh Morel <morel.josh@hotmail.com>
@@ -9,6 +9,6 @@ Description: Train and use next-word text prediction models
 Depends: R (>= 3.1.0)
 Imports:
     stringi,
-    jsonlite
+    data.table
 License: GPL (>= 2)
 Suggests: testthat
