Added look-up to vocabulary to replace with UNK word

--- a/r/textpred/DESCRIPTION
+++ b/r/textpred/DESCRIPTION
@@ -6,9 +6,12 @@ Date: 2016-09-10
 Author: Josh Morel
 Maintainer: Josh Morel <morel.josh@hotmail.com>
 Description: Train and use next-word text prediction models
-Depends: R (>= 3.1.0)
+Depends:
+    R (>= 3.1.0)
 Imports:
     stringi,
     data.table
 License: GPL (>= 2)
-Suggests: testthat
+Suggests:
+    testthat
+RoxygenNote: 5.0.1
